--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "build": "rm -rf build && mkdir build && cp public/* build/ && webpack --mode production"
+    "build": "rm -rf build && mkdir build && cp -r public/* build/ && webpack --mode production"
   },
   "repository": {
     "type": "git",
