--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+     "sourceMap": false,
     "target": "es2020",                                
     "outDir": "build",                              
     "rootDir": "src",                             
