--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-     "sourceMap": false,
+    "sourceMap": false,
     "target": "es2020",                                
     "outDir": "build",                              
     "rootDir": "src",                             
     "strict": true,                                 
     "esModuleInterop": true,                       
     "skipLibCheck": true,                         
-    "forceConsistentCasingInFileNames": true     
+    "forceConsistentCasingInFileNames": true     ,
+    "moduleResolution": "node"
   }
 }
